<resources>
    <string name="app_name">My First Mobile App</string>
    <string name="usuario">Digite usuario</string>
    <string name="contraseña">Digite contraseña</string>
    <string name="botonLogin">Iniciar sesión</string>
    <string name="label">No tiene usuario?</string>
    <string name="label2">Regístrate aquí</string>
    <string name="label3">Olvidó la contraseña?</string>
    <string name="label4">Recuperala aquí</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mistiendas">Mis tiendas</string>
    <string name="productos">Productos</string>
    <string name="tienda">Tienda</string>
    <string name="descripcionTienda">Descripcion</string>
    <string name="telefonoTienda">Telefono</string>
    <string name="botonTienda">Guardar tienda</string>
    <string name="nombreTienda">Nombre</string>
</resources>